ola-parser/src/testdata/syntaxTests/parsing/import_complex_invalid_from.sol
import {hello, world} from fn;
// ----
// ParserError 6845: (27-35): Expected import path.
